# JSON2SQL-plugin

./: CMakeLists.txt  Contribution.md  Contributions.md  README.md  compilation.md  handle_get_request.md
code/: global-json-api.h  handle_delete_request.c  handle_delete_request.h  handle_get_request.c  handle_patch_request.c  handle_post_request.c  handle_put_request.c  json-api.c
doc/: TODO.md  compilation.md  handle_delete_request.md  handle_get_request.md  handle_patch_request.md  handle_post_request.md  handle_put_request.md  inspiration.md  stack-n-architecture-decisions.md
docker/rockylinux/: Dockerfile
include/: common.h  handle_delete_request.h  handle_get_request.h  handle_patch_request.h  handle_post_request.h  handle_put_request.h
misc/: Dockerfile
misc/RHEL/: Dockerfile
misc/ubuntu/: Dockerfile
resources/: procedures.md  resources.md  status.md  tables.md  v1.md
